--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "compodoc" : "npx compodoc -p src/tsconfig.app.json",
+    "compodoc": "npx compodoc -p src/tsconfig.app.json",
     "compodoc:serve": "npx compodoc -p src/tsconfig.app.json -s",
     "compodoc:serve:watch": "npx compodoc -p src/tsconfig.app.json -s -w"
   },
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
